--- a/portfolio2.html
+++ b/portfolio2.html
@@ -110,7 +110,7 @@
 <section class="section">
   <h2>About Me</h2>
   <p>I used to be a normal student until I got bitten by a radioactive bug... just kidding. But I do love to code and break stuff (intentionally). Here's me when I finally fix a bug after 4 hours:</p>
-  <img src="C:\Users\HP\Downloads\intro-1640118396.jpg" alt="debugging meme" class="meme meme-about" />
+  <img src="https://i.postimg.cc/LXyqBCGs/intro-1640118396.jpg" alt="debugging meme" class="meme meme-about" />
 </section>
 
 <section class="section">
@@ -120,7 +120,7 @@
     <li><strong>To-Do List</strong> – Where I list all my tasks and then ignore them. Productivity ftw.</li>
     <li><strong>Personal Website</strong> – You're looking at it! 😎</li>
   </ul>
-<img src="C:\Users\HP\Downloads\images (5).jpeg" 
+<img src="https://i.postimg.cc/vmC8YRRf/images-5.jpg" 
      alt="meme" 
      class="meme meme-projects" />
 </section>
