--- a/portfolio2.html
+++ b/portfolio2.html
@@ -167,7 +167,7 @@
 
 <!-- Background Music -->
 <audio id="bg-music" autoplay loop>
-  <source src="C:\Users\HP\Downloads\ჩუბინა - Chub1na.Ge _ 1 Hour Loop.mp3" type="audio/mp3">
+  <source src="https://drive.google.com/file/d/1EG7UIDY-ghJygBSLo0-5oHhOY1fFS46I/view?usp=sharing" type="audio/mp3">
  </audio>
 <button onclick="toggleMusic()" style="position:fixed;bottom:20px;right:20px;padding:10px;background:#333;color:#fff;border:none;border-radius:5px;z-index:999;">
   🔊 Music On
