--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <section class="section">
     <h2>Projects</h2>
     <ul>
-      <li><strong>Calculator Web App</strong> – Because sometimes we pretend not to know 9 x 9.</li>
+      <li><strong>BS Logo</strong> – Powered by Caffeine, Bugs, and Pure Brilliance.</li>
       <li><strong>To-Do List</strong> – Where I list all my tasks and then ignore them. Productivity ftw.</li>
       <li><strong>Personal Website</strong> – You're looking at it! 😎</li>
     </ul>
